# globalplatform-dpkg

./: configure.in  globalplatform_6.0.0.orig.tar.gz.delta  globalplatform_6.0.0.orig.tar.gz.id
debian/: README.source  changelog  control  copyright  libglobalplatform6.lintian-overrides  libglobalplatform6.symbols  rules  watch
debian/patches/: automake.patch  autoreconf.patch  export-symbols-regex.patch  fix-ld-relro.patch  fix-pcsc-protocol-refs.patch  fix-pcsclite-link.patch  series  src-fix-Makefile.patch  src-fix-globalplatformTest.patch
src/: Makefile.am  globalplatform.pc.in  globalplatformTest.c
src/globalplatform/: connection.h  types.h
